--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-star-ratings": "^2.3.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
