--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-star-ratings": "^2.3.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
   },
